package seedu.sudocook;

/**
 * Command to recommend recipes that use a specified ingredient,
 * provided the inventory holds sufficient quantity of it.
 */
public class RecommendByIngredientCommand extends Command {
    private final String ingredientName;

    public RecommendByIngredientCommand(String ingredientName) {
        super(false);
        this.ingredientName = ingredientName;
    }

    @Override
    public void execute(Inventory inventory, RecipeBook recipes) {
        double amount = 0;
        String inventoryUnit = null;
        boolean found = false;
        for (int i = 0; i < inventory.getSize(); i++) {
            Ingredient ingredient = inventory.getIngredient(i);
            if (ingredient.getName().equalsIgnoreCase(ingredientName)) {
                if (!found) {
                    inventoryUnit = ingredient.getUnit();
                    amount = ingredient.getQuantity();
                    found = true;
                } else {
                    double converted = UnitConverter.convert(
                            ingredient.getQuantity(), ingredient.getUnit(), inventoryUnit);
                    if (converted >= 0) {
                        amount += converted;
                    }
                }
            }
        }
        if (!found) {
            Ui.printError("Ingredient \"" + ingredientName + "\" does not exist in inventory.");
            return;
        }
        StringBuilder sb = new StringBuilder();
        int count = 0;
        for (int i = 0; i < recipes.getSize(); i++) {
            Recipe recipe = recipes.getRecipe(i);
            for (Ingredient ing : IngredientRequirements.aggregateFor(recipe)) {
                if (!ing.getName().equalsIgnoreCase(ingredientName)) {
                    continue;
                }
                double required = UnitConverter.convert(ing.getQuantity(), ing.getUnit(), inventoryUnit);
                if (required >= 0 && required <= amount) {
                    count += 1;
                    sb.append(count).append(". ").append(recipe.getName()).append("\n");
                }
                break;
            }
        }
        if (count == 0) {
            Ui.printMessage("No recipes meet the requirement");
        } else {
            Ui.printMessage("Recipes containing " + ingredientName + ":\n" + sb.toString().trim());
        }
    }
}
