@startuml
scale 4
hide circle
skinparam classAttributeIconSize 0

class RecommendByIngredientCommand {
    - ingredientName: String
    --
    + execute(inventory: Inventory, recipes: RecipeBook): void
}

class RecommendByInventoryCommand {
    --
    + execute(inventory: Inventory, recipes: RecipeBook): void
}

class RecommendByMissingCommand {
    - maxMissing: int
    --
    + execute(inventory: Inventory, recipes: RecipeBook): void
}

class Command {
    --
    + execute(inventory: Inventory, recipes: RecipeBook): void
}

class Inventory {
    --
}

class RecipeBook {
    --
}

class Ingredient {
    - name: String
    - quantity: double
    - unit: String
    --
}

class Recipe {
    - name: String
    --
}

together {
    class RecommendByIngredientCommand
    class RecommendByInventoryCommand
    class RecommendByMissingCommand
}

together {
    class Inventory
    class RecipeBook
}

' Inheritance - -down-|> places Recommend classes above Command
RecommendByIngredientCommand -down-|> Command
RecommendByInventoryCommand -down-|> Command
RecommendByMissingCommand -down-|> Command

' All four command classes have dependency on both Inventory and RecipeBook
Command ..> Inventory
Command ..> RecipeBook
RecommendByIngredientCommand ..> Inventory
RecommendByInventoryCommand ..> Inventory
RecommendByInventoryCommand ..> RecipeBook
RecommendByMissingCommand ..> RecipeBook
RecommendByIngredientCommand ..> RecipeBook
RecommendByMissingCommand ..> Inventory

' Inventory owns Ingredients by value; Recipe references shared Ingredient instances
Inventory "1" o-- "*" Ingredient
RecipeBook "1" *-- "*" Recipe
Recipe "*" o-- "*" Ingredient

@enduml